# rfoutlet

./: CMakeLists.txt  README.rst  RFOutlet.cpp  RFOutlet.h  daemon.h  pyrfoutlet.py  rest.cpp  rfoutlet_switch.py  setup.py  todo.txt
custom_components/rfoutlet/: switch.py
source/: RFOutlet.cpp  RFOutlet.h  daemon.h  pyrfoutlet.py  rest.cpp  rfoutlet_switch.py
